change account and repo to lowercase

--- a/client/home.jade
+++ b/client/home.jade
@@ -5,7 +5,7 @@ template(name="success")
   .row 
     p Congratulation!
   .row 
-    p {{dockerHubAccount}} / {{dockerHubRepo}} 
+    p.lower {{dockerHubAccount}} / {{dockerHubRepo}} 
   .row
     p built successfully
   .row 
